# insignia

./: .gitignore  README.md  README_Insignia_Pipeline.md  gitpush.sh
OriginalFiles/: README  requirements.txt
OriginalFiles/insignia-1.1/: Makefile.in  NEWS
OriginalFiles/insignia-1.2/: THANKS  configure
OriginalFiles/insignia-1.2/src/MatchCover/: Makefile.am  mcover-build.sh
OriginalProgram/insignia-1.1/: README
OriginalProgram/insignia-1.2/: config.h.in
edited/: COPYING  NEWS  config.h  configure.ac  insignia_alignment_pipeline_UPDATED.docx
edited/programs/: bthu.mcover  fasta-clean.pl  kmer2fasta.pl  mcover-intersect
edited/projects/: NC_009848.4_vs_NC_009848.4.match  NC_009848.4_vs_NZ_CP120681.2.match  NC_009848.4_vs_NZ_CP140161.1.mums  NC_014551.1_vs_NZ_CP140161.1.match  NZ_CM000753.1.bgx  NZ_CM000753.1.shr  NZ_CP120681.2_vs_NZ_CM000753.1.match  NZ_CP120681.2_vs_NZ_CP120681.2.match  NZ_CP140161.1_vs_NC_009848.4.mums
edited/src/Signature/: Makefile.am  kmer-intersect  kmer-intersect.cc  mcover-intersect.cc  signify.sh  unique-mer
edited/src/Signature/.deps/: common-mer.Po  mcover-intersect.Po
insignia/: README  README_Insignia_Pipeline_Full_v3.docx  insignia_alignment_pipeline.docx  ~$ADME_Insignia_Pipeline_Full_v3.docx
insignia-1.1/: AUTHORS  configure  configure.ac
insignia-1.1/src/FastaTools/: Makefile.am  fasta-chop.c
insignia-1.1/src/MatchCover/: mcover.hh
insignia-1.1/src/Signature/: common-mer.c  kmer-seqs2.pl
insignia-1.2/: Makefile  config.h  config.status
insignia-1.2/src/: Makefile
insignia-1.2025/: config.status
insignia-1.2025/db_cov/: NZ_CP120681.2.cov
insignia-1.2025/programs/: common-mer  insignify.pl  mcover-gi  mcover-union  runmcover.py
insignia-1.2025/projects/: NC_009848.4_vs_NC_014551.1.match  NC_009848.4_vs_NC_014551.1.mums  NC_009848.4_vs_NZ_CP120681.2.mums  NC_014551.1_vs_NC_014551.1.match  NC_014551.1_vs_NZ_CM000753.1.match  NC_014551.1_vs_NZ_CP120681.2.match  NZ_CM000753.1.sig  NZ_CM000753.1_vs_NZ_CP120681.2.match  NZ_CM000753.1_vs_NZ_CP140161.1.match  NZ_CP120681.2_vs_NC_009848.4.match  NZ_CP120681.2_vs_NC_014551.1.match  NZ_CP120681.2_vs_NZ_CP140161.1.match  NZ_CP140161.1_vs_NC_014551.1.match  NZ_CP140161.1_vs_NZ_CM000753.1.match  NZ_CP140161.1_vs_NZ_CP120681.2.match  NZ_CP140161.1_vs_NZ_CP140161.1.match
insignia-1.2025/src/: Makefile.in
insignia-1.2025/test-data/: bthu_vs_bamy.mums
insignia/db_cov/: NC_009848.4.cov  NC_014551.1.cov  NC_021505.1.cov  NZ_CP120681.2.cov  NZ_CP140161.1.cov
insignia/insignia-webui/: app.py
insignia/programs/: addgenomes.sh  buildalignments.sh  createdb.sh  fasta-cut  kmer-seqs.pl  mcover  runsignatures.py  signify.sh
insignia/projects/: .sig  NC_009848.4.bgx  NC_009848.4.ref  NC_009848.4.shr  NC_009848.4.sig  NC_009848.4.uni  NC_009848.4_vs_NC_021505.1.match  NC_009848.4_vs_NC_021505.1.mums  NC_009848.4_vs_NZ_CM000753.1.match  NC_009848.4_vs_NZ_CP120681.2.mums  NC_009848.4_vs_NZ_CP140161.1.match  NC_014551.1_vs_NC_009848.4.match  NC_014551.1_vs_NC_009848.4.mums  NC_014551.1_vs_NC_021505.1.match  NC_014551.1_vs_NC_021505.1.mums  NC_021505.1.ref  NC_021505.1.shr  NC_021505.1.sig  NC_021505.1.uni  NC_021505.1_vs_NC_009848.4.match  NC_021505.1_vs_NC_009848.4.mums  NC_021505.1_vs_NC_014551.1.match  NC_021505.1_vs_NC_014551.1.mums  NC_021505.1_vs_NC_021505.1.match  NC_021505.1_vs_NZ_CM000753.1.match  NC_021505.1_vs_NZ_CM000753.1.mums  NC_021505.1_vs_NZ_CP120681.2.match  NC_021505.1_vs_NZ_CP120681.2.mums  NC_021505.1_vs_NZ_CP140161.1.match  NC_021505.1_vs_NZ_CP140161.1.mums  NZ_CM000753.1.bgx  NZ_CM000753.1.sig  NZ_CM000753.1.tgt  NZ_CM000753.1.uni  NZ_CM000753.1_vs_NC_009848.4.match  NZ_CM000753.1_vs_NC_014551.1.match  NZ_CM000753.1_vs_NC_021505.1.match  NZ_CM000753.1_vs_NC_021505.1.mums  NZ_CM000753.1_vs_NZ_CP120681.2.match  NZ_CP120681.2_vs_NC_009848.4.match  (+11 more)
old/: README
(+83 files in other folders)
